--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Jobni</string>
     <string name="splash_screen_text_1">ЛУЧШАЯ РАБОТА</string>
     <string name="splash_screen_text_2">ЛУЧШИМ СПЕЦИАЛИСТАМ</string>
+    <string name="activity_intro_1_1">Место встречи</string>
+    <string name="activity_intro_1_2">Работодателя и Сотрудника</string>
+    <string name="activity_intro_2_1">Будь работодателем и соискателем одновременно</string>
+    <string name="activity_intro_2_2">Используй одну учетную запись для поиска работы и сотрудников</string>
+    <string name="activity_intro_3_1">Находи и забирай лучшее</string>
+    <string name="activity_intro_3_2">Сохраняй фильтры, просматривай историю поиска, получай уведомления обо всех подходящих вакансиях и резюме</string>
+    <string name="activity_intro_4_1">Сразу же записывайся на собеседование</string>
+    <string name="activity_intro_4_2">В чате общайся с работодателем, выбирай день и время встречи и используй карту, чтобы узнать, как добраться до выбранной компании</string>
+    <string name="activity_intro_5_1">Не упускай момент</string>
+    <string name="activity_intro_5_2">Используй планировщик, чтобы не путаться в назначенных встречах и не забывать о предстоящих собеседованиях</string>
 </resources>
