--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Jobni</string>
     <string name="splash_screen_text_1">ЛУЧШАЯ РАБОТА</string>
     <string name="splash_screen_text_2">ЛУЧШИМ СПЕЦИАЛИСТАМ</string>
-    <string name="activity_intro_1_1">Место встречи</string>
-    <string name="activity_intro_1_2">Работодателя и Сотрудника</string>
+    <string name="activity_intro_1_1">МЕСТО ВСТРЕЧИ</string>
+    <string name="activity_intro_1_2">РАБОТОДАТЕЛЯ И СОИСКАТЕЛЯ</string>
     <string name="activity_intro_2_1">Будь работодателем и соискателем одновременно</string>
     <string name="activity_intro_2_2">Используй одну учетную запись для поиска работы и сотрудников</string>
     <string name="activity_intro_3_1">Находи и забирай лучшее</string>
