--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,8 @@
     <string name="card_open_company_description_text">С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности позволяет оценить значение форм развития</string>
     <string name="card_open_vacancy_description_headline">Описание Вакансии:</string>
 
-
     <string name="card_open_vacancy_description_text">С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности позволяет оценить значение форм развития</string>
     <string name="card_open_requirements_description_headline">Требования:</string>
-
-
 
     <string name="card_open_requirements_description_text">Водительский стаж от 3 лет\nЛичный легковой автомобиль\nОтветственность, коммуникабельность</string>
     <string name="card_open_duties_description_headline">Обязанности:</string>
@@ -56,4 +53,7 @@
     <string name="search_item">Менеджер по продажам</string>
     <string name="search_button">НАЙТИ РАБОТУ</string>
     <string name="menu_right_item">Java</string>
+
+    <string name="search_view_hint">Search View Hint</string>
+    <string name="search_view_suggestions_empty">Nothing to Search</string>
 </resources>
