--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,13 +86,26 @@
     <string name="menu_bottom_profile_logged_in_7">Смена почты</string>
     <string name="menu_bottom_profile_logged_in_8">Выход</string>
     <string name="registration_01_referral_link">Реферальная ссылка</string>
-    <string name="registration_01_registration_mail">Почта</string>
-    <string name="registration_01_registration_password_01">Пароль</string>
-    <string name="registration_01_registration_password_2">Подтвердите пароль</string>
+    <string name="registration_01_referral_message">Вам будет зачислен бонус 150 р</string>
+    <string name="registration_01_registration_mail_1">Почта</string>
+    <string name="registration_01_registration_mail_2">Старая почта</string>
+    <string name="registration_01_registration_mail_3">Новая почта</string>
+    <string name="registration_01_registration_mail_4">Подтвердите новую почту</string>
+    <string name="registration_01_registration_password_1">Пароль</string>
+    <string name="registration_01_registration_password_2">Старый пароль</string>
+    <string name="registration_01_registration_password_3">Новый пароль</string>
+    <string name="registration_01_registration_password_4">Подтвердите пароль</string>
     <string name="registration_01_registration_phone">Телефон</string>
     <string name="registration_01_registration_phone_code">Код</string>
-    <string name="registration_01_close">Закрыть</string>
     <string name="registration_01_bind_account">Привязать аккаунт</string>
-    <string name="registration_01_next">Далее</string>
-    <string name="intro_05_start">Старт</string>
+    <string name="registration_01_mail_change">Смена почты</string>
+    <string name="registration_01_password_change">Смена пароля</string>
+    <string name="registration_02_surname">Фамилия</string>
+    <string name="registration_02_name">Имя</string>
+    <string name="registration_02_middle_name">Отчество</string>
+    <string name="button_next">Далее</string>
+    <string name="button_back">Назад</string>
+    <string name="button_begin">Старт</string>
+    <string name="button_ready">Готово</string>
+    <string name="button_close">Закрыть</string>
 </resources>
