--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,13 @@
 	<string name = "chats_item_hr">Колесников Вячеслав Владимирович</string>
 	<string name = "chats_item_post">Исполнительный директор</string>
 	<string name = "chats_item_vacancy">Заместитель Исполнительного директора</string>
+	<string name = "chats_message_text_big">Равным образом новая модель организационной деятельности способствует подготовки и
+		реализациимодели развития. Товарищи! новая модель организационной деятельности способствует подготовки и
+		реализации позиций, занимаемых участниками в отношении поставленных задач. Равным образом постоянный
+		количественный рост и сфера нашей активности способствует подготовки и реализации форм развития
+	</string>
+	<string name = "chats_message_text_small">Равным образом новая модель организационной деятельности способствует подготовки и
+		реализациимодели развития
+	</string>
+	<string name = "chats_message_time">16:37</string>
 </resources>
