--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="search_item">Менеджер по продажам</string>
     <string name="search_button">НАЙТИ РАБОТУ</string>
     <string name="menu_right_item">Java</string>
-    <string name="search_view_hint">Search View Hint</string>
+    <string name="search_view_hint">Введите Компетенцию</string>
     <string name="search_view_suggestions_empty">Nothing to Search</string>
     <string name="menu_bottom_profile_not_logged_in_1">Авторизация</string>
     <string name="menu_bottom_profile_not_logged_in_2">Регистрация</string>
