Загрузка карточки по выбранной из списка вакансии Испраление ошибки в поиске при пустом ответе, вывод слов - Нечего искать

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="close">Закрыть</string>
     <string name="registration">Зарегистрироваться</string>
     <string name="enter">Войти</string>
+    <string name="search_response_empty">Нет рузультатов!</string>
 </resources>
