Последние изменения из архивной ветки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name = "search_tab_candidate">Кандидаты</string>
 	<string name = "text_newbie">H -</string>
 	<string name = "text_experienced">O -</string>
+    <string name="text_ruble">₽</string>
 </resources>
