--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,5 @@
     <string name="reviews_tab_about">Активные</string>
     <string name="reviews_tab_my">Архивные</string>
 	<string name = "btn_auth_info_text">ВЫБЕРИТЕ СПОСОБ АВТОРИЗАЦИИ</string>
+	<string name = "error_load_data_text">ERROR LOAD DATA</string>
 </resources>
