--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,8 @@
     <string name="user_auth_new_mail_confirm">Подтвердите почту</string>
     <string name="btn_change_user_mail_confirm_text">Подтвердить</string>
     <string name="error_load_data_text">ERROR LOAD DATA</string>
+    <string name = "nav_header_text_info">Вы не авторизованы!</string>
+    <string name = "nav_header_btn_auth_text">Пройти авторизацию</string>
+    <string name = "nav_header_text_or">Или</string>
+    <string name = "nav_header_btn_reg_text">Зарегистрироваться</string>
 </resources>
