--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,6 @@
     <string name = "nav_header_text_or">Или</string>
     <string name = "nav_header_btn_reg_text">Зарегистрироваться</string>
     <string name = "nav_header_btn_auth_click">Auth</string>
+	<string name = "data_protection">Согласие на хранение и защиту персональных данных</string>
+    <string name = "public_offers">Согласие публичной оферты</string>
 </resources>
