--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name = "nav_header_btn_auth_click">Auth</string>
 	<string name = "data_protection">Согласие на хранение и защиту персональных данных</string>
     <string name = "public_offers">Согласие публичной оферты</string>
+    <integer name="com_vk_sdk_AppId">6923050</integer>
 </resources>
