google init final

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
 	<string name="reg_info_text">ВЫБЕРИТЕ СПОСОБ РЕГИСТРАЦИИ</string>
     <string name = "user_auth_info_text">УКАЖИТЕ ВАШИ ДАННЫЕ</string>
 	<string name = "user_auth_fb_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ FACEBOOK</string>
+	<string name = "user_auth_google_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ GOOGLE+</string>
 	<string name = "user_auth_delete_info_text">Авторизация сброшена</string>
 	<string name = "btn_change_user_pass_text">Сменить пароль</string>
 	<string name = "btn_change_user_mail_text">Сменить почту</string>
