--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,9 +153,14 @@
 	<string name = "vacancy_tab_archive">Архивные</string>
 	<string name = "reviews_tab_about">Активные</string>
 	<string name = "reviews_tab_my">Архивные</string>
+	<string name = "tv_company_balance_text">БАЛАНС КОМПАНИИ:</string>
+	<string name = "tv_company_balance_amount_text">10000</string>
+	<string name = "btn_company_balance_fill_text">Пополнить баланс</string>
+	<string name = "btn_company_balance_history_text">История платежей</string>
+	<string name = "btn_company_balance_provided_text">Оказанные услуги</string>
 	<string name = "auth_info_text">ВЫБЕРИТЕ СПОСОБ АВТОРИЗАЦИИ</string>
-	<string name="reg_info_text">ВЫБЕРИТЕ СПОСОБ РЕГИСТРАЦИИ</string>
-    <string name = "user_auth_info_text">УКАЖИТЕ ВАШИ ДАННЫЕ</string>
+	<string name = "reg_info_text">ВЫБЕРИТЕ СПОСОБ РЕГИСТРАЦИИ</string>
+	<string name = "user_auth_info_text">УКАЖИТЕ ВАШИ ДАННЫЕ</string>
 	<string name = "user_auth_fb_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ FACEBOOK</string>
 	<string name = "user_auth_ok_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ ОДНОКЛАСНИКИ</string>
 	<string name = "user_auth_google_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ GOOGLE+</string>
