--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
 	<string name = "mail_2">Старая почта</string>
 	<string name = "mail_3">Новая почта</string>
 	<string name = "mail_4">Подтвердите новую почту</string>
+	<string name = "mail_5">Номер телефона</string>
 	<string name = "password_1">Пароль</string>
 	<string name = "password_2">Старый пароль</string>
 	<string name = "password_3">Новый пароль</string>
@@ -173,6 +174,7 @@
 	<string name = "user_auth_ok_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ ОДНОКЛАСНИКИ</string>
 	<string name = "user_auth_google_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ GOOGLE+</string>
 	<string name = "user_auth_vk_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ ВКОНТАКТЕ</string>
+	<string name = "user_auth_phone_info_text">ИСПОЛЬЗУЙТЕ НОМЕР ТЕЛЕФОНА</string>
 	<string name = "user_auth_delete_info_text">Авторизация сброшена</string>
 	<string name = "btn_change_user_pass_text">Сменить пароль</string>
 	<string name = "btn_change_user_mail_text">Сменить почту</string>
