--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,4 +204,6 @@
 	<string name = "btn_company_vacancy_edit_text">Редактировать</string>
 	<string name = "btn_company_vacancy_delete_text">Удалить</string>
 	<string name = "btn_company_vacancy_archive_text">В архив</string>
+	<string name = "btn_user_vk_auth_text">Пройти авторизацию</string>
+	<string name = "tv_vk">ОТВЯЗАТЬ УЧЕТНУЮ ЗАПИСЬ</string>
 </resources>
