--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
 	<string name = "user_auth_google_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ GOOGLE+</string>
 	<string name = "user_auth_vk_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ ВКОНТАКТЕ</string>
 	<string name = "user_auth_phone_info_text">ИСПОЛЬЗУЙТЕ НОМЕР ТЕЛЕФОНА</string>
+	<string name = "user_auth_instagram_info_text">ИСПОЛЬЗУЙТЕ ДАННЫЕ INSTAGRAM</string>
 	<string name = "user_auth_delete_info_text">Авторизация сброшена</string>
 	<string name = "btn_change_user_pass_text">Сменить пароль</string>
 	<string name = "btn_change_user_mail_text">Сменить почту</string>
@@ -205,4 +206,7 @@
 	<string name = "btn_company_vacancy_archive_text">В архив</string>
 	<string name = "btn_user_vk_auth_text">Пройти авторизацию</string>
 	<string name = "tv_vk">ОТВЯЗАТЬ УЧЕТНУЮ ЗАПИСЬ</string>
+	<string name = "client_id">de279bd8e8e242e2aa5acb80d3dfcd6b</string>
+	<string name = "redirect_url">https://instagram.com/</string>
+	<string name = "base_url">https://api.instagram.com/</string>
 </resources>
