--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,10 +209,10 @@
 	<string name = "btn_company_vacancy_archive_text">В архив</string>
 	<string name = "btn_user_vk_auth_text">Пройти авторизацию</string>
 	<string name = "tv_vk">ОТВЯЗАТЬ УЧЕТНУЮ ЗАПИСЬ</string>
-	<string name = "client_id">de279bd8e8e242e2aa5acb80d3dfcd6b</string>
-	<string name = "client_secret">f9b1bf2579ec46a4be9084236dc79b40 </string>
-	<string name = "redirect_url">https://instagram.com/</string>
-	<string name = "base_url">https://api.instagram.com/</string>
+	<string name = "instagram_client_id">de279bd8e8e242e2aa5acb80d3dfcd6b</string>
+	<string name = "instagram_client_secret">f9b1bf2579ec46a4be9084236dc79b40</string>
+	<string name = "instagram_redirect_url">https://instagram.com/</string>
+	<string name = "instagram_base_url">https://api.instagram.com/</string>
 	<string name = "discord_client_id">564805611997626388</string>
 	<string name = "discord_client_secret">IumshvS2iBrxR5m73veXQeZ92z1RKRfN</string>
 	<string name = "discord_base_url">https://discordapp.com/api/</string>
@@ -220,4 +220,10 @@
 	<string name = "mailru_client_id">764749</string>
 	<string name = "mailru_base_url">https://connect.mail.ru/</string>
 	<string name = "mailru_redirect_url">https://mail.ru/</string>
+	<string name = "ok_client_id">1277635072</string>
+	<string name = "ok_public_key">CBALCICNEBABABABA</string>
+	<string name = "ok_base_url">https://connect.ok.ru/</string>
+	<string name = "ok_redirect_url">https://ok.ru/</string>
+	<string name = "ok_error">Error</string>
+	<string name = "ok_auth_cancelled">Authorization cancelled</string>
 </resources>
